verif/test/deca/syntax/invalid/var-declaration-after-inst-verif.res
src/test/deca/syntax/invalid/var-declaration-after-inst.deca:12:8: no viable alternative at input 'b'
